app/acr-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: py-api-deployment
    labels:
        app: py-api
spec:
    replicas: 2
    # type: LoadBalancer
    selector:
        matchLabels:
            app: py-api
    template:
        metadata:
            labels:
                app: py-api
        spec:
            containers:
                - name: py-api
                  image: <replace acrname.azurecr.io/microserviceApiImageName:github.sha>
                  ports:
                      #   - containerPort: 80
                      - containerPort: 8080
                        name: py-api-port
